# Penugasan1_PrakRSI

./: README.md
backend/: pyproject.toml
backend/app/: main.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: page.tsx
